mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec: 
  rules:
  - host: mymongoapp.com
    http:
      paths:
      - backend:
          serviceName: mongo-express-service
          servicePort: 8081
